[tool.poetry]
name = "infra-update-checker"
version = "0.1.0"
description = ""
authors = ["Artur Akmalov <artur@akmalov.com>"]
readme = "README.md"
packages = [{include = "infra_update_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
bootstrap-flask = "^2.2.0"
requests = "^2.29.0"
bs4 = "^0.0.1"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
